syntax = "proto3";
package milkyway.pools.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/milkyway-labs/milkyway/x/pools/types";

// Params defines the parameters for the pools module.
message Params {
  // AllowedServicesIDs defines the list of service IDs that the module allows
  // to join by pools.
  repeated uint32 allowed_services_ids = 1
      [ (gogoproto.customname) = "AllowedServicesIDs" ];
}