syntax = "proto3";
package milkyway.restaking.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/milkyway-labs/milkyway/v9/x/restaking/types";

// Params defines the parameters for the module.
message Params {
  // UnbondingTime represents the time that will take for assets to be unbonded
  // after the user initiates an unbonding request. This will be applied to all
  // types of restaking: pool, operator and service restaking.
  int64 unbonding_time = 1 [(gogoproto.stdduration) = true];

  // AllowedDenoms represents the list of denoms allowed for restaking
  // and that will be considered when computing rewards. If no denoms are set,
  // all denoms will be considered as restakable.
  repeated string allowed_denoms = 2;

  // RestakingCap represents the maximum USD value of overall restaked assets
  // inside the chain. If set to 0, it indicates no limit, allowing any amount
  // of assets to be restaked.
  string restaking_cap = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // MaxEntries represents the maximum number of entries for unbonding
  // delegation.
  uint32 max_entries = 4;
}
