syntax = "proto3";
package milkyway.rewards.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "milkyway/rewards/v2/models.proto";

option go_package = "github.com/milkyway-labs/milkyway/v7/x/rewards/migrations/v2";
option (gogoproto.goproto_getters_all) = false;

// RewardsPlan represents a rewards allocation plan.
message RewardsPlan {
  option (gogoproto.equal) = true;

  // ID is the unique identifier of the plan.
  uint64 id = 1 [(gogoproto.customname) = "ID"];

  // Description is the description of the plan.
  string description = 2;

  // ServiceID is the service ID which the plan is related to.
  uint32 service_id = 3 [(gogoproto.customname) = "ServiceID"];

  // AmountPerDay is the amount of rewards to be distributed, per day.
  // The rewards amount for every block will be calculated based on this.
  repeated cosmos.base.v1beta1.Coin amount_per_day = 4 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];

  // StartTime is the starting time of the plan.
  google.protobuf.Timestamp start_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // EndTime is the ending time of the plan.
  google.protobuf.Timestamp end_time = 6 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // RewardsPool is the address where rewards to be distributed are stored.
  // If the rewards pool doesn't have enough funds to be distributed, then
  // the rewards allocation for this plan will be skipped.
  string rewards_pool = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // PoolsDistribution is the rewards distribution parameters for pools.
  milkyway.rewards.v2.Distribution pools_distribution = 8 [(gogoproto.nullable) = false];

  // OperatorsDistribution is the rewards distribution parameters for operators.
  milkyway.rewards.v2.Distribution operators_distribution = 9 [(gogoproto.nullable) = false];

  // UsersDistribution is the rewards distribution parameters for users.
  milkyway.rewards.v2.UsersDistribution users_distribution = 10 [(gogoproto.nullable) = false];
}
